Fix guides page layout on IE

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -44,6 +44,10 @@ body {
 	font-size: 1.4rem;
 }
 
+html, body {
+	height: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -757,7 +761,7 @@ select.state-select {
 
 .guide-box-image-container {
 	position: relative;
-	flex: 0 1 40%;
+	flex: 0 0 40%;
 	height: 15em;
 	min-width: 15em;
 	margin: 0 1em 0 0;
@@ -767,7 +771,7 @@ select.state-select {
 }
 
 .guide-box-description {
-	flex: 1 2 0;
+	flex: 1 2 0px;
 	margin: 0;
 }
 
@@ -996,14 +1000,16 @@ select.state-select {
 
 	.guide-box {
 		flex-direction: column;
-		align-items: start;
+		align-items: flex-start;
 	}
 
 	.guide-box-header {
-		flex: 1 1 100%;
+		flex: 1 1 auto;
+		width: 100%;
 	}
 
 	.guide-box-content {
+		flex: 1 1 auto;
 		width: 100%;
 		margin-right: 0;
 	}
